[tool.poetry]
name = "hololabs"
version = "0.1.0"
description = ""
authors = ["Dongmoon Kim <ehdans04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pytest = "^8.3.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
